created house.js, and added some houses to the appstate

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   </header>
 
   <main>
+    <!-- ANCHOR my section -->
+    <!-- ANCHOR jeremy section -->
     <section class="container">
       <div class="row mt-2">
         <div class="col-12">
