interpolated house info to html template, put in header and image for house form section

--- a/index.html
+++ b/index.html
@@ -25,12 +25,73 @@
 
   <main>
     <!-- ANCHOR my section -->
+    <section class="container">
+      <div class="row mt-2">
+        <div class="col-12">
+          <h2 class="fs-1">Houses</h2>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="row">
+        <div class="col-12">
+          <h3>
+            List Your House
+          </h3>
+        </div>
+        <div class="col-md-6">
+          <div class="shadow bg-light px-5 py-2">
+            <form>
+              <label for="houseAddress">House Address</label>
+              <input id="houseAddress" type="text">
+            </form>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="nice interior design" class="img-fluid">
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div id="houseListing" class="row mt-2">
+        <!-- <div class="col-12">
+          <div class="shadow bg-light d-flex mb-4">
+            <img
+              src="https://images.unsplash.com/photo-1480074568708-e7b720bb3f09?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="House" class="car-img">
+            <div class="p-3 flex-grow-1">
+              <h3>1968 5645 N Fake St, Boise, ID, 83701</h3>
+              <div class="d-flex justify-content-between">
+                <div>
+                  <p class="fs-3">$400000</p>
+                  <p>Square Footage: 7500</p>
+                  <div class="d-flex gap-2 align-items-center">
+                    <span>Bds: 4</span>
+                    <span>Bths: 2</span>
+                  </div>
+                </div>
+                <div class="fs-5">
+                  <p>Currently Available</p>
+                </div>
+              </div>
+              <div class="text-end">
+                <button class="btn btn-outline-danger">Delete House</button>
+              </div>
+            </div>
+          </div>
+        </div> -->
+      </div>
+    </section>
+    </section>
     <!-- ANCHOR jeremy section -->
     <section class="container">
       <div class="row mt-2">
         <div class="col-12">
           <h2 class="fs-1">Cars</h2>
         </div>
+
       </div>
     </section>
     <section class="container">
