--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-md-6">
           <div class="shadow bg-light px-5 py-2">
-            <form>
+            <form onsubmit="app.housesController.createHouseListing()">
               <div class="input-group mb-3">
                 <label class="input-group-text" for="houseAddress">Address</label>
                 <input id="houseAddress" name="address" type="text" required minlength="5" maxlength="75"
@@ -100,7 +100,7 @@
         </div>
         <div class="col-md-6">
           <img
-            src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            src="https://images.unsplash.com/photo-1616046229478-9901c5536a45?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="nice interior design" class="img-fluid">
         </div>
       </div>
